# EleDo

./: Cargo.toml  README.md  build.rs  resource.rc
.github/workflows/: continuous.yml  rust.yml
deelevate/: Cargo.toml
deelevate/src/: command.rs
examples/: spawn.rs
src/: bridge.rs  command.rs  lib.rs  pipe.rs  process.rs  sid.rs  spawn.rs  token.rs
utils/: Cargo.toml
