[package]
name = "deelevate"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"
description = "Drop privileges on Windows"
license = "MIT"
documentation = "https://docs.rs/deelevate"
readme = "README.md"
keywords = ["UAC", "elevate", "privileges"]

[[bin]]
name = "eledo"
path = "bin/eledo.rs"

[[bin]]
name = "normdo"
path = "bin/normdo.rs"

[[bin]]
name = "ptybridge"
path = "bin/ptybridge.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = [
  "errhandlingapi",
  "fileapi",
  "handleapi",
  "namedpipeapi",
  "processenv",
  "processthreadsapi",
  "securitybaseapi",
  "synchapi",
  "userenv",
  "winbase",
  "winerror",
  "winsafer",
  "winuser",
]}
