[package]
name = "deelevate"
version = "0.2.0"
authors = ["Wez Furlong"]
edition = "2018"
description = "Drop privileges on Windows"
license = "MIT"
documentation = "https://docs.rs/deelevate"
readme = "../README.md"
keywords = ["UAC", "elevate", "privileges"]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
pathsearch = "0.2"
lazy_static = "1.4"
rand = "0.8"
shared_library = "0.1"
termwiz = "0.15"
winapi = { version = "0.3", features = [
  "accctrl",
  "aclapi",
  "combaseapi",
  "consoleapi",
  "errhandlingapi",
  "fileapi",
  "handleapi",
  "ioapiset",
  "namedpipeapi",
  "objbase",
  "processenv",
  "processthreadsapi",
  "securitybaseapi",
  "shellapi",
  "synchapi",
  "userenv",
  "winbase",
  "wincontypes",
  "winerror",
  "winsafer",
  "winuser",
]}
