[package]
name = "utils"
version = "0.1.1"
authors = ["Wez Furlong"]
edition = "2018"
description = "Drop privileges on Windows"
license = "MIT"
documentation = "https://docs.rs/deelevate"
readme = "../README.md"
keywords = ["UAC", "elevate", "privileges"]
build = "build.rs"

[[bin]]
name = "eledo"
path = "bin/eledo.rs"

[[bin]]
name = "normdo"
path = "bin/normdo.rs"

[[bin]]
name = "eledo-pty-bridge"
path = "bin/ptybridge.rs"

[build-dependencies]
embed-resource = "1.7"
vergen = "3"
cc = "1.0"

[dependencies]
structopt = "0.3"
pathsearch = "0.2"
deelevate = { path = "../deelevate" }
winapi = { version = "0.3", features = [
  "wincon",
  "winnls",
]}
